# ibc_plugin_eos

./: .gitmodules  CMakeLists.txt  README.md
Docker/: Dockerfile  README.md
libraries/chain/: controller.cpp
libraries/chain/include/eosio/chain/: controller.hpp
libraries/fc/include/fc/io/: raw.hpp
plugins/: CMakeLists.txt
plugins/chain_plugin/: chain_plugin.cpp
plugins/chain_plugin/include/eosio/chain_plugin/: chain_plugin.hpp
plugins/ibc_plugin/: CMakeLists.txt  ibc_plugin.cpp
plugins/ibc_plugin/include/eosio/ibc_plugin/: ibc_plugin.hpp  protocol.hpp
plugins/net_plugin/: net_plugin.cpp
plugins/producer_plugin/: producer_plugin.cpp
plugins/producer_plugin/include/eosio/producer_plugin/: producer_plugin.hpp
programs/nodeos/: CMakeLists.txt
scripts/: .build_vars  eosio_build_darwin.sh
